fix PANDAX-644 FE: "Sign Up" button (entertainers section) doesn't work on Mobile landing

--- a/client/landing/mobile.scss
+++ b/client/landing/mobile.scss
@@ -1,139 +1,140 @@
 @media (max-width: 800px) {
-    #welcome {
-        background-image: url('./images/legs-mobile.background.png');
-        background-size: cover;
-        .arrow-rect {
-            margin-top: 8px
-        }
+  #welcome {
+    background-image: url('./images/legs-mobile.background.png');
+    background-size: cover;
+    .arrow-rect {
+      margin-top: 8px
     }
+  }
 
-    .wrapper img {
-        max-width: 100% !important;
+  .wrapper img {
+    max-width: 100% !important;
+  }
+  #customer, #entertainer {
+    img {
+      margin-bottom: -70px;
+      pointer-events: none;
     }
-    #customer, #entertainer {
-        img {
-            margin-bottom: -70px;
-        }
+  }
+  section {
+    padding: 0 32px;
+  }
+  .features-page .content .service-title {
+    font-size: 18px;
+  }
+  #entertainer, .features-page.black {
+    background-image: none;
+  }
+  section.dark-gray {
+    background: black;
+  }
+  .header {
+    position: relative;
+    top: 0;
+    background: transparent;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    a {
+      font-size: 18px;
+      margin: 32px;
     }
-    section {
-        padding: 0 32px;
-    }
-    .features-page .content .service-title {
-        font-size: 18px;
-    }
-    #entertainer, .features-page.black {
-        background-image: none;
-    }
-    section.dark-gray {
-        background: black;
-    }
-    .header {
-        position: relative;
-        top: 0;
-        background: transparent;
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        a {
-            font-size: 18px;
-            margin: 32px;
-        }
-    }
+  }
 
-    .features-page .content,
-    #service .content {
-        flex-direction: column;
-        .service-offer {
-            width: 100%;
-        }
+  .features-page .content,
+  #service .content {
+    flex-direction: column;
+    .service-offer {
+      width: 100%;
     }
-    .features-page .content .service-offer img {
-        display: none;
-    }
-    footer {
-        flex-direction: column;
-        height: auto;
-        position: relative;
-        line-height: 24px;
-        padding-bottom: 8px;
-    }
-    #entertainer img {
-        position: relative;
-    }
+  }
+  .features-page .content .service-offer img {
+    display: none;
+  }
+  footer {
+    flex-direction: column;
+    height: auto;
+    position: relative;
+    line-height: 24px;
+    padding-bottom: 8px;
+  }
+  #entertainer img {
+    position: relative;
+  }
 
-    #customer,
-    #entertainer {
-        .minx-info {
-            width: 100%;
-            padding: 0;
-        }
-        .get-minx {
-            width: 100%;
-            text-align: center;
-            margin: 30px 0;
-            p {
-                text-align: center;
-            }
-        }
+  #customer,
+  #entertainer {
+    .minx-info {
+      width: 100%;
+      padding: 0;
     }
-    #service {
-        .content {
-            width: 100%;
-        }
-        img {
-            position: relative;
-        }
+    .get-minx {
+      width: 100%;
+      text-align: center;
+      margin: 30px 0;
+      p {
+        text-align: center;
+      }
     }
+  }
+  #service {
+    .content {
+      width: 100%;
+    }
+    img {
+      position: relative;
+    }
+  }
 
-    #customer .get-minx, #entertainer .get-minx {
-        float: none;
+  #customer .get-minx, #entertainer .get-minx {
+    float: none;
+  }
+  #customer img {
+    position: relative;
+    max-width: 100%;
+  }
+  #advantages {
+    .content {
+      flex-direction: column;
     }
-    #customer img {
-        position: relative;
-        max-width: 100%;
+    .advantages-list {
+      width: auto;
+      margin: 0;
     }
-    #advantages {
-        .content {
-            flex-direction: column;
-        }
-        .advantages-list {
-            width: auto;
-            margin: 0;
-        }
+  }
+  .wrapper h2, #entertainer h2 {
+    margin: 16px 0;
+  }
+  #welcome, .features-page, .wrapper {
+    min-height: 0;
+  }
+  .wrapper {
+    padding: 0;
+  }
+  #entertainer {
+    padding-bottom: 20px;
+  }
+  #service .service-offer,
+  #welcome h1,
+  body {
+    margin: 0;
+  }
+  #entertainer, #customer {
+    .minx-info, .get-minx {
+      margin: 0;
+      padding-bottom: 8px;
     }
-    .wrapper h2, #entertainer h2 {
-        margin: 16px 0;
-    }
-    #welcome, .features-page, .wrapper {
-        min-height: 0;
-    }
-    .wrapper {
-        padding: 0;
-    }
-    #entertainer {
-        padding-bottom: 20px;
-    }
-    #service .service-offer,
-    #welcome h1,
-    body {
-        margin: 0;
-    }
-    #entertainer, #customer {
-        .minx-info, .get-minx {
-            margin: 0;
-            padding-bottom: 8px;
-        }
-    }
+  }
 }
 
 @media (max-width: 400px) {
-    .wrapper h2 {
-        font-size: 34px;
-    }
-    .wrapper {
-        min-height: 0;
-    }
-    section {
-        padding: 0 16px;
-    }
+  .wrapper h2 {
+    font-size: 34px;
+  }
+  .wrapper {
+    min-height: 0;
+  }
+  section {
+    padding: 0 16px;
+  }
 }
